--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Wantana</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <link
       rel="icon"
       type="image/x-icon"
