--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+    <script src="../node_modules/pdfmake/build/pdfmake.min.js"></script>
+    <script src="../node_modules/pdfmake/build/vfs_fonts.js"></script>
     <link
       rel="icon"
       type="image/x-icon"
